test/good/generics/basic01.px

func f<T>(x: T): Int def
    return 42

print f(5)
print f('S')
